--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anime-forms-website",
   "version": "1.0.0",
-  "description": "A Node.js-based anime discussion website using Bootstrap and public folder",
+  "description": "A Node.js anime discussion website with user login system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
@@ -18,7 +20,7 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "keywords": ["anime", "discussion", "nodejs", "bootstrap"],
-  "author": "ErenYeager",
+  "keywords": ["anime", "discussion", "nodejs", "bootstrap", "login"],
+  "author": "Your Name",
   "license": "MIT"
 }
